--- a/app/assets/stylesheets/observ/_layout.scss
+++ b/app/assets/stylesheets/observ/_layout.scss
@@ -218,6 +218,12 @@
       margin-bottom: $observ-spacing-lg;
     }
 
+    &__content {
+      display: flex;
+      flex-direction: column;
+      gap: $observ-spacing-lg;
+    }
+
     &__title {
       font-size: $observ-font-size-2xl;
       font-weight: 700;
